--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^8.5.8",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.5"
+    "@types/multer": "^1.4.11",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@prisma/client": "^3.9.2",
@@ -22,6 +23,7 @@
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^3.9.2"
   }
 }
